# small-town-watchdog

./: .env.example  .gitignore  .replit  Instructions.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  vercel.json
api/: index.ts  tsconfig.json
artifacts/api-server/: build.mjs
artifacts/api-server/src/: app.ts
artifacts/api-server/src/lib/: ai.ts  asyncHandler.ts  locationFilter.ts  logger.ts  requireAdmin.ts
artifacts/api-server/src/routes/: alerts.ts  ballot-items.ts  civic-item-flags.ts  civic-items.ts  compare.ts  coverage.ts  diagnostics.ts  documents.ts  elections.ts  email-subscribers.ts  entities.ts  error-reports.ts  export.ts  index.ts  (+9 more)
artifacts/mockup-sandbox/: package.json
artifacts/small-town-watchdog/: index.html  package.json  vite.config.ts
artifacts/small-town-watchdog/.replit-artifact/: artifact.toml
artifacts/small-town-watchdog/src/: App.tsx  index.css
data/: civic_items.json
lib/api-spec/: openapi.yaml
lib/db/: package.json
lib/db/src/: entity-taxonomy.ts
python_engine/: README.md  __init__.py  compare_engine.py  config.py  db.py  document_fetcher.py  document_parser.py  election_pipeline.py  ingestion_pipeline.py  legal_guardrails.py  main.py  meeting_pipeline.py  models.py  reminder_pipeline.py  requirements.txt  seed_sources.py  source_registry.py  source_validator.py  summarizer.py
python_engine/tests/: test_pipeline.py
scripts/: package.json  source_discovery.py
scripts/src/: discover-election-sources.ts  fix-entity-counties.ts  generate-location-checklist.ts  seed-locations.ts  seed-ms.ts
(+53 files in other folders)
