[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
    "openai>=2.38.0",
    "pdfminer-six>=20260107",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tenacity>=9.1.4",
]
